# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/multimedia/player_framework/config.gni")

utils_include = []

media_include = []

utils_source = [
  "$MEDIA_PLAYER_HISTREAMER/src/meta/any.cpp",
  "$MEDIA_PLAYER_HISTREAMER/src/meta/format.cpp",
  "$MEDIA_PLAYER_HISTREAMER/src/meta/media_source.cpp",
  "$MEDIA_PLAYER_HISTREAMER/src/meta/meta.cpp",
  "$MEDIA_PLAYER_HISTREAMER/src/buffer/avsharedmemory/avsharedmemorybase.cpp",
]

media_source = [
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/media/media_enum_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/avplayer/media_data_source_callback.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/avplayer/avplayer_callback.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/avplayer/avplayer_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/avrecorder/avrecorder_callback.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/avrecorder/avrecorder_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/mediasource/media_source_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/metadatahelper/avmetadataextractor_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/metadatahelper/avmetadatahelper_callback.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/metadatahelper/helper_data_source_callback.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/js/common/common_napi.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/frameworks/native/common/media_errors.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/services/utils/avdatasrcmemory.cpp",
  "$MEDIA_PLAYER_ROOT_DIR/services/utils/player_xcollie.cpp",
]
