# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/sa_profile/sa_profile.gni")
import("//foundation/multimedia/player_framework/config.gni")

etc_file = {
  if (player_framework_enable_start_stop_on_demand) {
    process_cfg = "./on_demand/media_service.cfg"
    sa_profile_json = "./on_demand/3002.json"
  } else {
    process_cfg = "./media_service.cfg"
    sa_profile_json = "./3002.json"
  }
}

ohos_prebuilt_etc("media_service.cfg") {
  source = etc_file.process_cfg
  relative_install_dir = "init"
  part_name = "player_framework"
  subsystem_name = "multimedia"
}

ohos_sa_profile("media_service_profile") {
  sources = [ etc_file.sa_profile_json ]
  part_name = "player_framework"
}

group("media_service_etc") {
  deps = [
    ":media_service.cfg",
    ":media_service_profile",
  ]
}

ohos_prebuilt_etc("screen_capture_capsule_image") {
  source = "image/capsule.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_capsule_stop_image") {
  source = "image/capsule_stop.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_mic_image") {
  source = "image/mic.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_mic_off_image") {
  source = "image/mic_off.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_notification_image") {
  source = "image/notification.png"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_stop_dark_image") {
  source = "image/stop_dark.png"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_stop_image") {
  source = "image/stop.png"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screencapture_config") {
  source = "screencapture/screencapture_config.para"
  subsystem_name = "multimedia"
  part_name = "player_framework"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("screencapture_config_dac") {
  source = "screencapture/screencapture_config.para.dac"
  subsystem_name = "multimedia"
  part_name = "player_framework"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("screen_capture_capsule_stop_live2_image") {
  source = "image/capsule_stop_live2.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}

ohos_prebuilt_etc("screen_capture_light_image") {
  source = "image/light.svg"
  subsystem_name = "multimedia"
  relative_install_dir = "screencapture"
  part_name = "player_framework"
}